# training_and_teaching_methods

./: .gitignore  ICON_AUTHORS.TXT  README.md  TODO.TXT  appendix.rst  blooms_action_verbs.html  book.sh  build.py  collect-and-review-expectations-your-students.html  conf.py  construct-well-balanced-teaching-units.html  e-learning-breakfast-agora.html  fist_or_five.md  four-corner-feedback.html  how_to_teach.md  improving-training-bioinformatics.html  index.rst  knowing_knowledge.txt  method_list.md  microwave.md  mindmeister-makes-mind-maps.html  moderating-magnets.html  online.rst  organizing-panel-discussion.html  preface.md  preface.rst  pros_and_cons.md  pyproject.toml  recipe-collect-cards-open-your-lesson.html  recipe-fist-or-five.html  recipe-guess-who-i-am.html  recipe-memory.html  recipe-pros-and-cons.html  recipe-wrapping-up.html  repeating-carrousel.html  scrabble.html  supermarket.html  support.md  template.md  voting-poker-chips.md  (+1 more)
_layouts/: default.html
advanced/: fishbowl.md  group_puzzle.md  panel_discussion.md  tricks_with_bricks.md
appendix/: checklists.md  courses.md  links.md  protein_dance.md  quotes_teaching.md  training_course_design.md
coding_exercises/: code_reviews.rst  coding.md  coding_kata.md  debugging.md  gamification.md  group_assignments.md  group_assignments.rst  group_puzzle.md  index.rst  kata.md  live_coding.md  prevent_install_failure.md  projects.md  reduced_examples.md  reduced_examples.rst  self_study_material.md  squares.py
connecting/: expectations.md  four_questions.md  getting_to_know.md  index.rst  message_future.md  (+5 more)
(+308 files in other folders)
